Fix scrollbar
Fix scrollbar

--- a/CSS/mp4List.css
+++ b/CSS/mp4List.css
@@ -82,12 +82,36 @@ nav ul li a font {
     overflow: scroll;
     overflow-x: hidden;
 }
+/* Let's get this party started */
+::-webkit-scrollbar {
+    width: 10px;
+}
+
+/* Track */
+::-webkit-scrollbar-track {
+    -webkit-box-shadow: inset 0 0 6px rgba(0, 0, 0, 0.5); 
+    -webkit-border-radius: 10px;
+    border-radius: 0px;
+}
+
+/* Handle */
+::-webkit-scrollbar-thumb {
+    -webkit-border-radius: 10px;
+    border-radius: 10px;
+    background: rgba(0, 255, 255, 0.5);
+    -webkit-box-shadow: inset 0 0 6px rgba(0, 0, 0, 0.5); 
+}
+::-webkit-scrollbar-thumb:window-inactive {
+    background: rgba(0, 255, 255, 0.5); 
+}
+
 #status {
     font-size: 15px;
     color: white;
     text-align: center;
     padding: 0px 10px 10px 0px;
 }
+
 #playlist-video li {
     cursor: pointer;
     font-size: 15px;
